--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,13 @@ chardet==3.0.4
 click==7.1.2
 cryptography==2.9.2
 dash==1.11.0
-dash-bootstrap-components==0.9.2
+dash-bootstrap-components==0.10.0
 dash-core-components==1.9.1
 dash-html-components==1.0.3
 dash-renderer==1.4.0
 dash-table==4.6.2
 decorator==4.4.2
+eurostat==0.2.0
 Flask==1.1.2
 Flask-Compress==1.5.0
 future==0.18.2
@@ -22,10 +23,10 @@ Jinja2==2.11.2
 jsonpath-rw==1.4.0
 lxml==4.5.0
 MarkupSafe==1.1.1
-numpy==1.18.3
+numpy==1.18.4
 pandas==1.0.3
 pandaSDMX==0.9
-plotly==4.6.0
+plotly==4.7.1
 ply==3.11
 psutil==5.7.0
 pycparser==2.20
@@ -34,6 +35,7 @@ python-dateutil==2.8.1
 pytz==2020.1
 requests==2.23.0
 retrying==1.3.3
+scout-apm==2.14.1
 six==1.14.0
 urllib3==1.25.9
 Werkzeug==1.0.1
